Project02/main.tf
provider "aws" {
  region     = "us-east-1"
  access_key = "AKIA5E5G2APXFOYAM6RK"
  secret_key = "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"
}

# 1. Create VPC
resource "aws_vpc" "prod-vpcc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "productionn"
  }
}

# 2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpcc.id

}

# 3. Create custom route table
resource "aws_route_table" "prod-route-tablee" {
  vpc_id = aws_vpc.prod-vpcc.id

  route {
    cidr_block = "0.0.0.0/0"    # this cidr_block will send all ipv4 traffic wherever this route points is
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "prodd_crt"
  }
}


# 4. Create a subnet
resource "aws_subnet" "subnet-1" {
    vpc_id = aws_vpc.prod-vpcc.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"

    tags = {
        Name = "Prod_sn"
    }
}

# 5. Associate subnet with Route Table
# search "route table association" in documentation
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-tablee.id
}

# 6. Create a security group to allow port 22(tcp), 80(http), 443(https)
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow Web inbound traffic"
  vpc_id      = aws_vpc.prod-vpcc.id

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    # ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
  }
  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "TCP"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }


  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    # ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_Webb"
  }
}

# 7. Create a network interface with an ip in the subnet that was created in step 4
resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

#   attachment {
#     instance     = aws_instance.test.id
#     device_index = 1
#   }
}

# 8. Assign an elastic IP to the network interface created in step 7
# search terraform aws elastic ip or eip
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw]
}
# Note: deploying an eip requires internet gateway to be deployed first

# 9. Create Ubuntu server and install/enable apache2

resource "aws_instance" "web-server-instance" {
    ami = "ami-0557a15b87f6559cf"
    instance_type = "t2.micro"
    availability_zone = "us-east-1a"
    key_name = "mainn-key"
    # check network interface in terraform aws instance
    network_interface {
      device_index = 0
      network_interface_id = aws_network_interface.web-server-nic.id
    }

    user_data = <<-EOF
            #!/bin/bash
            sudo apt update -y
            sudo apt install apache2 -y
            sudo systemctl start apache2
            sudo bash -c 'echo your very first web server > /var/www/html/index.html'

            EOF

    tags = {
      Name = "web-server"
    }
}
